--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <span class="straight"></span>
       </div>
     </div>
+    <a class="header-logo-mobile-link" href="/"><img class="header-logo-mobile" src="svg/noemi-logo.svg" alt="logo"></a>
     <h1 class="header-title">Блог о творчестве, спорте, и образе жизни</h1>
   </header>
   <div class="page">
