index.html 04.06.2023 5pm

--- a/index.html
+++ b/index.html
@@ -49,8 +49,7 @@
         <article class="trend_post trend_post_cheese">
           <div class="trend_info">
             <ul class="trend_tags">
-              <li class="trend_tag"><a class="trend_tag_link" href="/">lifestyle</a></li>
-              <li class="trend_tag"><a class="trend_tag_link" href="/">interior</a></li>
+              <li class="trend_tag"><a class="trend_tag_link" href="/">food</a></li>
             </ul>
             <h2 class="trend_title">
               <a class="trend_link" href="/">Сыры на красивых картинках из интернета:какие они на вкус?</a>
@@ -61,7 +60,7 @@
           <div class="trend_info">
             <ul class="trend_tags">
               <li class="trend_tag"><a class="trend_tag_link" href="/">lifestyle</a></li>
-              <li class="trend_tag"><a class="trend_tag_link" href="/">interior</a></li>
+              <li class="trend_tag"><a class="trend_tag_link" href="/">travel</a></li>
             </ul>
             <h2 class="trend_title">
               <a class="trend_link" href="/">Собираемся в первый поход в горы</a>
@@ -71,8 +70,8 @@
         <article class="trend_post trend_post_orange">
           <div class="trend_info">
             <ul class="trend_tags">
-              <li class="trend_tag"><a class="trend_tag_link" href="/">lifestyle</a></li>
-              <li class="trend_tag"><a class="trend_tag_link" href="/">interior</a></li>
+              <li class="trend_tag"><a class="trend_tag_link" href="/">food</a></li>
+              <li class="trend_tag"><a class="trend_tag_link" href="/">health</a></li>
             </ul>
             <h2 class="trend_title">
               <a class="trend_link" href="/">Сейчас в тренде: сколько витамина в лимонах?</a>
@@ -414,7 +413,7 @@
   <div class="popup">
     <div class="popup_container">
       <form class="popup_content" action="#" method="post">
-        <div class="popup_title title">Ваш фидбек</div>
+        <div class="popup_title">Ваш фидбек</div>
         <div class="popup_close">
         </div>
         <div class="form_item">
@@ -432,13 +431,13 @@
           <div class="form_radio_wrap">
             <div class="form_item_radio">
               <label class="radio_label">
-                <input type="radio" class="item_radio" name="form_item_radio">,
+                <input type="radio" class="item_radio" name="form_item_radio">
                 <span class="form_radio_text">Да</span>
               </label>
             </div>
             <div class="form_item_radio">
               <label class="radio_label">
-                <input type="radio" class="item_radio" name="form_item_radio">,
+                <input type="radio" class="item_radio" name="form_item_radio">
                 <span class="form_radio_text">Нет</span>
               </label>
             </div>
